A bug fixed and 9.2 support added